--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,11 @@ google-resumable-media==2.7.2
 googleapis-common-protos==1.65.0
 grpcio==1.67.0
 grpcio-status==1.67.0
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
 msgpack==1.1.0
+packaging==24.1
 pillow==11.0.0
 proto-plus==1.24.0
 protobuf==5.28.2
