--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+beautifulsoup4==4.12.3
 bootstrap4==0.1.0
 CacheControl==0.14.0
 cachetools==5.5.0
@@ -8,6 +9,7 @@ charset-normalizer==3.4.0
 cryptography==43.0.3
 dj-database-url==2.2.0
 Django==5.1.2
+django-bootstrap4==24.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 firebase-admin==6.5.0
@@ -39,6 +41,7 @@ PyJWT==2.9.0
 pyparsing==3.2.0
 requests==2.32.3
 rsa==4.9
+soupsieve==2.6
 sqlparse==0.5.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
